# FETIN2k25

./: .gitignore  README.md
Docs/: NovaArquitetura.txt  Perguntas das entrevistas.txt
Firmware/Beacon/: CMakeLists.txt  platformio.ini  sdkconfig.esp32-c3-devkitm-1  sdkconfig.esp32-c3-devkitm-1.old
Firmware/Beacon/src/: main.c
Firmware/Gateway/: CMakeLists.txt  Doxyfile  partitions.csv  platformio.ini  sdkconfig.esp32-s3-devkitm-1-MB.old
Firmware/Gateway/boards/: esp32-s3-devkitm-1-16MB.json
Firmware/Gateway/include/: ble_scanner.h  gateway.h  http_client_manager.h  wifi_manager.h
Firmware/Gateway/partitions/: default_16MB.csv
Firmware/Gateway/src/: CMakeLists.txt  ble_scanner.c  http_client_manager.c  main.c  wifi_manager.c
app/: .gitignore  README.md  pubspec.yaml
app/android/app/: build.gradle  google-services.json
app/ios/Runner/: GoogleService-Info.plist  Info.plist
app/lib/: app_state.dart  index.dart  main.dart
app/lib/flutter_flow/: app_bottom_navigation.dart  flutter_flow_animations.dart  flutter_flow_button_tabbar.dart  flutter_flow_icon_button.dart  flutter_flow_model.dart  flutter_flow_theme.dart  flutter_flow_util.dart  flutter_flow_widgets.dart  lat_lng.dart  (+4 more)
app/test/: widget_test.dart
app/web/: index.html
app/windows/: CMakeLists.txt
database/: createBeaconsTable.sql  createGatewaysTable.sql  createInfoTable.sql  createLoginTable.sql  createTasksTable.sql  createUsersTable.sql
server/: .env  .gitignore  README.md  run.py
server/app/: createTestDb.py  infos.py  main.py  models.py  routes.py  rssi.py  schemas.py  tasks.py
(+37 files in other folders)
